workspace = { members = ["src/common"] }
[package]
name = "sylphum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "src/common"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "gen"
path = "src/gen/main.rs"

